--- a/src/themes/mediawiki/layouts.less
+++ b/src/themes/mediawiki/layouts.less
@@ -78,6 +78,13 @@
 					}
 				}
 
+				> .oo-ui-fieldLayout-help {
+					// Override the default
+					margin-right: 0;
+					// Move into the space of 'margin-right' of header
+					margin-left: -@size-icon;
+				}
+
 				> .oo-ui-fieldLayout-field {
 					width: 60%;
 				}
